--- a/assets/estilos.css
+++ b/assets/estilos.css
@@ -2,10 +2,107 @@ body{
 	margin: 200px;
 	border: 1px;
 }
-
+.tCanchas{
+	width:70%;
+    height:65%;
+}
+.verde{
+	background-color:#00CC00;
+}
+.cafe{
+	background-color:#CC9900;
+}
+.absoluto{
+	position: absolute;
+}
+.borde{
+	border: solid 2px #FFFFFF;
+}
+.circuloCentral{
+	margin-left: 44%;
+	margin-top: 20%;
+	width: 10%;
+    height: 20%;	
+    border-radius: 50%;
+}
+.lineaCentral{
+	margin-left: 49%; 
+	width:.1%; 
+	height:100%; 
+}
+.canchaIz{
+	width: 20%;
+    height: 50%;
+	margin-left: 0%;
+	margin-top: 13%;
+}
+.canchaD{
+	width: 20%;
+    height: 50%;
+	margin-left: 80%;
+	margin-top: 13%;
+}
+.cDer{
+	width: 10%;
+    height: 20%;	
+    border-radius: 50%;
+	margin-left: 75%;
+	margin-top: 20%;
+}
+.cIzq{
+	width: 10%;
+    height: 20%;	
+    border-radius: 50%;
+	margin-left: 15%;
+	margin-top: 20%;
+}
+.diamDer{
+	margin-left: 80%;
+	margin-top: 20%;
+	background-color: white;
+	border-left: 1px solid #ccc; 
+	width:.1%; 
+	height:20%;
+}
+.diamIzq{
+	margin-left: 20%;
+	margin-top: 20%;
+	background-color: white;
+	border-left: 1px solid #ccc; 
+	width:.1%; 
+	height:20%; 
+}
+.horizontalArriba{
+	margin-top: 10%;
+	width:100%;
+	height:.1%;
+}
+.horizontalInf{
+	margin-top: 55%;
+	width:100%;
+	height:.1%;
+}
+.horizontalCentro{
+	margin-top: 33%;
+	margin-left: 23%;
+	width:52%;
+	height:.1%;
+}
+.verticalIzq{
+	margin-left: 23%;
+	margin-top: 10%;
+	width:.1%; 
+	height:65%;  
+}
+.verticalDer{
+	margin-left: 75%;
+	margin-top: 10%;
+	width:.1%; 
+	height:65%; 
+}
 .botones {
-	margin-left: 90px;
-	height: 50px;
-	width: 300px;
+	margin-left: 10%;
+	height: 10%;
+	width: 20%;
 
 }
