--- a/assets/estilos.css
+++ b/assets/estilos.css
@@ -42,6 +42,18 @@ body{
 	margin-left: 80%;
 	margin-top: 13%;
 }
+.circCanchaIzq{
+	border-radius: 0 200px 200px 0;
+	margin-top: 16%;
+	width: 25%;
+    height: 40%;	
+}
+.circCanchaDer{
+	border-radius: 200px 0px 0px 200px;
+	margin-top: 16%;
+	width: 25%;
+    height: 40%;
+}
 .cDer{
 	width: 10%;
     height: 20%;	
