canchas de basquet, sólo faltan los trapecios

--- a/assets/estilos.css
+++ b/assets/estilos.css
@@ -51,6 +51,7 @@ body{
 .circCanchaDer{
 	border-radius: 200px 0px 0px 200px;
 	margin-top: 16%;
+	margin-left: 75%;
 	width: 25%;
     height: 40%;
 }
